--- a/base/demo/namespace.yaml
+++ b/base/demo/namespace.yaml
@@ -3,6 +3,6 @@ kind: Namespace
 metadata:
   name: demo
   annotations:
-    fluxcd.io/ignore: "true"
+    fluxcd.io/[34mignore[39;49;00m: [33m"false"[39;49;00m
   labels:
     appmesh.k8s.aws/sidecarInjectorWebhook: enabled
